@@ -1,3 +1,11 @@
+2009-07-29  Mike Gorse  <mgorse@novell.com>
+
+	* at-spi-sharp/Accessibletest.cs, at-spi-sharp/Makefile.am,
+	at-spi-sharp/Base.cs: Add States test.
+
+	* at-spi-sharp/Base.cs: Only kill a process if it has already been
+	started.
+
 2009-05-21  Mike Gorse  <mgorse@novell.com>
 
 	* at-spi-sharp/SelectionTest.cs, at-spi-sharp/Makefile.am,
