@@ -1,3 +1,9 @@
+2009-07-29  Mike Gorse  <mgorse@novell.com>
+
+	* StateType.cs, StateSet.cs: Various fixes.
+
+	* Accessible.cs, RelationSet.cs, Makefile.am: Add Relation support.
+
 2009-07-01  Mike Gorse  <mgorse@novell.com>
 
 	* makefile.am: Set Package to Accessibility.
